--- a/source/styles/blocks/sort.scss
+++ b/source/styles/blocks/sort.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 20px;
 }
 
 .sort__label {
@@ -14,11 +14,18 @@
 .sort__select {
   max-width: 165px;
   height: 32px;
+  padding-right: 20px;
   font-family: $font-primary;
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   color: $color-base-primary;
   background-color: transparent;
+  background-image: url("../../icons/buttons/select-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 0 top 13px;
+  background-size: 10px 6px;
   border: 0;
+  appearance: none;
+  cursor: pointer;
 }
